--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-theme: minima
+#theme: minima
+theme:  y7kim/agency-jekyll-theme 
 plugins:
   - jekyll-feed
 
